--- a/index.html
+++ b/index.html
@@ -96,88 +96,72 @@
     </div>
 
     <script>
-        const URL = "https://opensheet.elk.sh/1-AHmCO1z5wza7wKse9XNhNLPl37IN1t36eETs6iKpYc/datos";
+    const URL = "https://opensheet.elk.sh/1-AHmCO1z5wza7wKse9XNhNLPl37IN1t36eETs6iKpYc/datos";
 
-        async function consultarNota() {
-            let ciIngresado = document.getElementById("ci").value.trim();
-            let resultado = document.getElementById("resultado");
+    async function consultarNota() {
+        let ciIngresado = document.getElementById("ci").value.trim();
+        let resultado = document.getElementById("resultado");
 
-            if (!ciIngresado) {
-                resultado.innerHTML = `<div class="alert alert-warning">⚠️ Ingresa tu CI</div>`;
-                return;
-            }
+        if (!ciIngresado) {
+            resultado.innerHTML = "⚠️ Ingresa tu CI";
+            return;
+        }
 
-            try {
-                let res = await fetch(URL);
-                let datos = await res.json();
+        try {
+            let res = await fetch(URL);
+            let datos = await res.json();
 
-                // Filtramos filas vacías
-                datos = datos.filter(row => row.CI && row.Nombre);
+            // Filtramos filas vacías
+            datos = datos.filter(row => row.CI && row.Nombre);
 
-                // Convertimos CI a string para asegurar coincidencia
-                let estudiantes = datos.filter(row => String(row.CI).trim() === ciIngresado);
+            let estudiante = datos.find(row => row.CI === ciIngresado);
 
-                if (estudiantes.length > 0) {
-                    resultado.innerHTML = "";
+            if (estudiante) {
+                // Limpiamos el contenedor
+                resultado.innerHTML = "";
 
-                    // Creamos tabla
-                    let tabla = document.createElement("table");
-                    tabla.classList.add("table", "table-striped", "table-bordered", "mt-3");
+                // Creamos la tabla
+                let tabla = document.createElement("table");
+                tabla.className = "table table-bordered mt-3";
 
-                    // Cabecera dinámica
-                    let thead = document.createElement("thead");
-                    let filaHead = document.createElement("tr");
-                    let claves = Object.keys(estudiantes[0]).filter(k => k && k !== "undefined");
-                    claves.forEach(key => {
-                        let th = document.createElement("th");
-                        th.textContent = key;
-                        filaHead.appendChild(th);
-                    });
-                    thead.appendChild(filaHead);
-                    tabla.appendChild(thead);
-
-                    // Cuerpo dinámico
-                    let tbody = document.createElement("tbody");
-
-                    estudiantes.forEach(est => {
-                        let filaBody = document.createElement("tr");
-                        claves.forEach((key, index) => {
-                            let td = document.createElement("td");
-                            td.textContent = est[key];
-
-                            // Coloreamos solo la última columna
-                            if (index === claves.length - 1) {
-                                let valor = parseFloat(est[key]);
-                                if (!isNaN(valor)) {
-                                    if (valor >= 80) td.classList.add("table-success");
-                                    else if (valor >= 66) td.classList.add("table-lechuga");
-                                    else if (valor >= 51) td.classList.add("table-warning");
-                                    else td.classList.add("table-danger");
-                                }
-                            }
-
-                            filaBody.appendChild(td);
-                        });
-                        tbody.appendChild(filaBody);
-                    });
-                    tabla.appendChild(tbody);
-
-                    resultado.appendChild(tabla);
-
-                } else {
-                    resultado.innerHTML = `<div class="alert alert-danger">❌ CI no encontrado</div>`;
+                // Encabezado
+                let thead = document.createElement("thead");
+                let filaEncabezado = document.createElement("tr");
+                for (let key in estudiante) {
+                    let th = document.createElement("th");
+                    th.textContent = key;
+                    filaEncabezado.appendChild(th);
                 }
-            } catch (error) {
-                resultado.innerHTML = `<div class="alert alert-warning">⚠️ Error al consultar datos</div>`;
-            }
-        }
+                thead.appendChild(filaEncabezado);
+                tabla.appendChild(thead);
 
-        function limpiarConsulta() {
-            document.getElementById("ci").value = "";
-            document.getElementById("resultado").innerHTML = "";
-            document.getElementById("ci").focus();
+                // Cuerpo
+                let tbody = document.createElement("tbody");
+                let fila = document.createElement("tr");
+                for (let key in estudiante) {
+                    let td = document.createElement("td");
+                    td.textContent = estudiante[key];
+                    fila.appendChild(td);
+                }
+                tbody.appendChild(fila);
+                tabla.appendChild(tbody);
+
+                resultado.appendChild(tabla);
+
+            } else {
+                resultado.innerHTML = "❌ CI no encontrado";
+            }
+        } catch (error) {
+            resultado.innerHTML = "⚠️ Error al consultar datos";
         }
-    </script>
+    }
+
+    function limpiarConsulta() {
+        document.getElementById("ci").value = "";
+        document.getElementById("resultado").innerHTML = "";
+        document.getElementById("ci").focus();
+    }
+</script>
 </body>
 
 </html>
