--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Consulta de Notas</title>
     <style>
@@ -15,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
+            height: 100vh;
         }
 
         .contenedor {
@@ -24,8 +22,7 @@
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             text-align: center;
-            width: 95%;
-            max-width: 900px;
+            width: 800px;
         }
 
         input {
@@ -36,20 +33,30 @@
 
         button {
             padding: 8px 15px;
+            background: #007bff;
             border: none;
+            color: white;
             border-radius: 5px;
             cursor: pointer;
         }
 
-        #btnBuscar {
-            background: #007bff;
-            color: white;
-        }
-
-        #btnBuscar:hover {
+        button:hover {
             background: #0056b3;
         }
 
+        .table-container {
+            overflow-x: auto; /* Habilita scroll horizontal si la tabla es muy ancha */
+            margin-top: 15px;
+        }
+
+        /* Ajusta la tabla al 100% del contenedor */
+        table {
+            width: 100%;
+            table-layout: auto; /* Se adapta automáticamente según el contenido */
+        }
+        td:last-child {
+            background-color: #b6fcd5;
+        }
         #btnLimpiar {
             background: #6c757d;
             color: white;
@@ -58,16 +65,6 @@
 
         #btnLimpiar:hover {
             background: #5a6268;
-        }
-
-        .table-container {
-            overflow-x: auto;
-            margin-top: 15px;
-        }
-
-        /* Verde lechuga personalizado */
-        .table-lechuga {
-            background-color: #b6fcd5 !important;
         }
     </style>
 </head>
@@ -78,90 +75,92 @@
             UNIDAD EDUCATIVA TÉCNICO HUMANÍSTICO NACIONAL AYACUCHO
         </h6>
         <h2>Consulta tu Nota</h2>
-        <h2 class="fw-bold">
+        <h2 class="d-flex align-items-center text-primary fw-bold">
             <i class="bi bi-pc-display fs-1 text-primary me-2"></i>
             SISTEMAS INFORMÁTICOS
         </h2>
         <input type="text" id="ci" placeholder="Ingresa tu CI" class="form-control">
         <br>
-        <button id="btnBuscar" class="w-40" onclick="consultarNota()">Buscar</button>
+        <button class="btn btn-primary w-50" onclick="consultarNota()">Buscar</button>
         <button id="btnLimpiar" class="w-40" onclick="limpiarConsulta()">Limpiar</button>
-
         <div id="resultado" class="table-container"></div>
 
-        <h6 class="mt-3">
+        <h6 class="d-flex align-items-center mt-3">
             <i class="bi bi-person-badge me-2 text-primary"></i>
-            Desarrollado por prof. Ronald Guachalla
+            Desarrollado por: Ronald Guachalla Calsina
         </h6>
     </div>
 
     <script>
-    const URL = "https://opensheet.elk.sh/1-AHmCO1z5wza7wKse9XNhNLPl37IN1t36eETs6iKpYc/datos";
+        const URL = "https://opensheet.elk.sh/1-AHmCO1z5wza7wKse9XNhNLPl37IN1t36eETs6iKpYc/6A";
 
-    async function consultarNota() {
-        let ciIngresado = document.getElementById("ci").value.trim();
-        let resultado = document.getElementById("resultado");
+        async function consultarNota() {
+            let ciIngresado = document.getElementById("ci").value.trim();
+            let resultado = document.getElementById("resultado");
 
-        if (!ciIngresado) {
-            resultado.innerHTML = "⚠️ Ingresa tu CI";
-            return;
-        }
-
-        try {
-            let res = await fetch(URL);
-            let datos = await res.json();
-
-            // Filtramos filas vacías
-            datos = datos.filter(row => row.CI && row.Nombre);
-
-            let estudiante = datos.find(row => row.CI === ciIngresado);
-
-            if (estudiante) {
-                // Limpiamos el contenedor
-                resultado.innerHTML = "";
-
-                // Creamos la tabla
-                let tabla = document.createElement("table");
-                tabla.className = "table table-bordered mt-3";
-
-                // Encabezado
-                let thead = document.createElement("thead");
-                let filaEncabezado = document.createElement("tr");
-                for (let key in estudiante) {
-                    let th = document.createElement("th");
-                    th.textContent = key;
-                    filaEncabezado.appendChild(th);
-                }
-                thead.appendChild(filaEncabezado);
-                tabla.appendChild(thead);
-
-                // Cuerpo
-                let tbody = document.createElement("tbody");
-                let fila = document.createElement("tr");
-                for (let key in estudiante) {
-                    let td = document.createElement("td");
-                    td.textContent = estudiante[key];
-                    fila.appendChild(td);
-                }
-                tbody.appendChild(fila);
-                tabla.appendChild(tbody);
-
-                resultado.appendChild(tabla);
-
-            } else {
-                resultado.innerHTML = "❌ CI no encontrado";
+            if (!ciIngresado) {
+                resultado.innerHTML = `<div class="alert alert-warning">⚠️ Ingresa tu CI</div>`;
+                return;
             }
-        } catch (error) {
-            resultado.innerHTML = "⚠️ Error al consultar datos";
-        }
-    }
 
-    function limpiarConsulta() {
+            try {
+                // Traer datos desde Google Sheets
+                let res = await fetch(URL);
+                let datos = await res.json();
+
+                // Filtrar filas vacías
+                datos = datos.filter(row => row.CI && row["Nombre Completo"]);
+
+                // Comparación segura: string y trim
+                let estudiante = datos.find(row => String(row.CI).trim() === ciIngresado);
+
+                if (estudiante) {
+                    resultado.innerHTML = "";
+
+                    // Crear tabla
+                    let tabla = document.createElement("table");
+                    tabla.classList.add("table", "table-striped", "table-bordered", "mt-3");
+
+                    // Cabecera dinámica
+                    let thead = document.createElement("thead");
+                    let filaHead = document.createElement("tr");
+
+                    for (let key in estudiante) {
+                        let th = document.createElement("th");
+                        th.textContent = key;
+                        filaHead.appendChild(th);
+                    }
+                    thead.appendChild(filaHead);
+                    tabla.appendChild(thead);
+
+                    // Cuerpo dinámico
+                    let tbody = document.createElement("tbody");
+                    let filaBody = document.createElement("tr");
+                    for (let key in estudiante) {
+                        let td = document.createElement("td");
+                        td.textContent = estudiante[key];
+                        filaBody.appendChild(td);
+                    }
+                    tbody.appendChild(filaBody);
+                    tabla.appendChild(tbody);
+
+                    resultado.appendChild(tabla);
+
+                } else {
+                    resultado.innerHTML = `<div class="alert alert-danger">❌ CI no encontrado</div>`;
+                }
+
+            } catch (error) {
+                resultado.innerHTML = `<div class="alert alert-warning">⚠️ Error al consultar datos</div>`;
+                console.error(error);
+            }
+        }
+        function limpiarConsulta() {
         document.getElementById("ci").value = "";
         document.getElementById("resultado").innerHTML = "";
         document.getElementById("ci").focus();
     }
-</script>
+    </script>
 </body>
 
 </html>
